Chat archive list alignment issues fixed

--- a/public/src/chat/structure.scss
+++ b/public/src/chat/structure.scss
@@ -1490,16 +1490,33 @@ li.ui-state-active {
 
         &.new-visitor, &.location, &.lookpage{
             a, span{
-                overflow: hidden;
-                -ms-text-overflow: ellipsis;
-                text-overflow: ellipsis;
-                white-space: nowrap;
-                display: inline-block;
-                position: relative;
-                top: 3px;
                 width: 80%;
             }
         }
+        &.lookpage a{
+            width: 80%;
+            word-break: break-all;
+            float: left;
+        }
+
+        &.chat-visitor{
+            width: 30%;
+        }
+
+        &.chat-visitor, &.location{
+            word-break: break-all;
+            i{ float: left;}
+            span{
+                float: left;
+                width: 80%;
+                b{
+                    color: #999;
+                    font-weight: normal;
+                    font-size: 12px;
+                }
+            }
+        }
+
         &.new-visitor{
             width: 30%;
         }
@@ -1559,11 +1576,11 @@ li.ui-state-active {
 }
 
 .agent-search{
-    border-radius: 0 0 0 0 !important;
+    border-radius: 3px;
     font-size: 12px !important;
     font-weight: 300;
     margin: 5px;
-    width: 90%;
+    width: 174px;
 }
 
 .agent-scroll{
